--- a/src/app/layout/healing-services/healing-services.component.html
+++ b/src/app/layout/healing-services/healing-services.component.html
@@ -3,7 +3,7 @@
                         <div class="news-block-two">
                             <div class="inner-box">
                                 <div class="image">
-                                    <a [routerLink]="['/hservice', slug.id]"> 
+                                    <a [routerLink]="['/services', hservice.slug]"> 
   <!-- Agar featured image ho -->
   <img *ngIf="!hservice.courseImage && hservice.featuredImage" 
        [src]="hservice.featuredImage" 
@@ -22,7 +22,7 @@
 
                                         </div>
                                     </div>
-                                    <a [routerLink]="['/services', hservice.id]"> 
+                                    <a [routerLink]="['/services', hservice.slug]"> 
                                          <h3 [innerHTML]="hservice.title.rendered"></h3>
                                     </a>
                                     <div class="text">
