--- a/src/app/layout/healing-services/services-details/childhood-trauma.component.html
+++ b/src/app/layout/healing-services/services-details/childhood-trauma.component.html
@@ -133,6 +133,9 @@
                                 <a class="button" routerLink="/book-session">Start Your Healing Journey Now</a>
                             </div>
                             </div>
+                            </div>
+                            </div>
+                            </div>
                     </section>
 
 
@@ -236,7 +239,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> 
 
     <section class="into-section-white-bg">
         <div class="container">
