--- a/src/app/layout/healing-services/services-details/childhood-trauma.component.html
+++ b/src/app/layout/healing-services/services-details/childhood-trauma.component.html
@@ -60,7 +60,7 @@
 
 
 
-                      </div>
+                    </div>
 
               <section class="about-banner">
                         <div class="container">
@@ -76,64 +76,8 @@
                                         <img *ngIf="cardImage2" [src]="cardImage2" class="imagedesign" />
 
 
-
-        </div>
-    </div>
-
-
-    <section class="postcard">
-        <div class="container">
-            <div class="postcard-row">
-                <div class="postcard-item1">
-                    <img src="images/laptop-meeting.jpeg" />
-                </div>
-                <div class="postcard-item2 wording">
-                    <h3>💬 Hear From Women Just Like You</h3>
-                    <p> “I didn’t even realize I had trauma until Kenny helped me connect the dots. Now I know why I
-                        react the way I do — and more importantly, how to choose differently.”
-                        <label>— Jessica, 41</label>
-                    </p>
-                    <p>“This work changed how I parent, love, and live. I only wish I’d found it sooner.”
-
-                        <label>— Lori, 38</label>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="about-banner">
-        <div class="container">
-            <div class="flex-about">
-                <div class="left-about aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500">
-                    <h5 class="tag-line">About Freedom</h5>
-                    <h3>🕊️ Final Word: It’s Not About Blame. It’s About Freedom.</h3>
-
-                    <div class="video-box-row">
-                        <ul>
-                            <li data-aos="fade-up" data-aos-duration="100">
-                                <span class="iconlist"><img src="images/long-term.png"></span>
-                                <p> You don’t have to relive every memory to heal.</p>
-                            </li>
-                            <li data-aos="fade-up" data-aos-duration="200">
-                                <span class="iconlist"><img src="images/active.png"></span>
-                                <p> You just have to understand the patterns, honor your truth, and begin the journey
-                                    back to yourself.</p>
-                            </li>
-                            <li data-aos="fade-up" data-aos-duration="300">
-                                <span class="iconlist"><img src="images/podcast.png"></span>
-                                <p> Every moment you wait, the old cycle runs one more day.</p>
-                            </li>
-                            <li data-aos="fade-up" data-aos-duration="400">
-                                <span class="iconlist"><img src="images/creator.png"></span>
-                                <p>But every step forward gives you back your power.</p>
-                            </li>
-                            <p>You’re safe here. You’re ready. Let’s begin.</p>
-                            <div class="button-row">
-                                <!-- <a class="button" href="meet-kenny.html">Read Kenny’s Story</a> -->
-                                <a class="button" routerLink="/book-session">Start Your Healing Journey Now</a>
-                            </div>
-                            </div>
-                            </div>
+                                    </div>
+                                </div>
                             </div>
                             </div>
                     </section>
@@ -211,10 +155,6 @@
                         </div>
                     </div>
 
-                </div>
-                <div class="right-about">
-                    <div class="about-right-img">
-                        <img class="imagedesign" src="images/kanny2.jpeg" alt="">
 
                     <section class="postcard">
                         <div class="container">
@@ -235,33 +175,77 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> 
+                    </section>
+                    <section class="about-banner">
+                        <div class="container">
+                            <div class="flex-about">
+                                <div class="left-about aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500">
+                                    <h5 class="tag-line">About Freedom</h5>
+                                    <h3>🕊️ Final Word: It’s Not About Blame. It’s About Freedom.</h3>
 
-    <section class="into-section-white-bg">
-        <div class="container">
-            <div class="wellness-header" data-aos="fade-up" data-aos-duration="2000">
-                <h3>Emotional Healing and Personal Growth</h3>
-                <p>Take the next step in your healing journey. Reclaim Your Best Life
-                    is a powerful guide to emotional healing, trauma recovery, and building
-                    a life of
-                    confidence, peace, and purpose.</p>
-            </div>
+                                    <div class="video-box-row">
+                                        <ul>
+                                            <li data-aos="fade-up" data-aos-duration="100">
+                                                <span class="iconlist"><img src="images/long-term.png"></span>
+                                                <p> You don’t have to relive every memory to heal.</p>
+                                            </li>
+                                            <li data-aos="fade-up" data-aos-duration="200">
+                                                <span class="iconlist"><img src="images/active.png"></span>
+                                                <p> You just have to understand the patterns, honor your truth, and begin the journey
+                                                    back to yourself.</p>
+                                            </li>
+                                            <li data-aos="fade-up" data-aos-duration="300">
+                                                <span class="iconlist"><img src="images/podcast.png"></span>
+                                                <p> Every moment you wait, the old cycle runs one more day.</p>
+                                            </li>
+                                            <li data-aos="fade-up" data-aos-duration="400">
+                                                <span class="iconlist"><img src="images/creator.png"></span>
+                                                <p>But every step forward gives you back your power.</p>
+                                            </li>
+                                            <p>You’re safe here. You’re ready. Let’s begin.</p>
+                                            <div class="button-row">
+                                                <!-- <a class="button" href="meet-kenny.html">Read Kenny’s Story</a> -->
+                                                <a class="button" routerLink="/book-session">Start Your Healing Journey Now</a>
+                                            </div>
+                                        </ul>
+                                    </div>
+
+                                </div>
+                                <div class="right-about">
+                                    <div class="about-right-img">
+                                        <img class="imagedesign" src="images/kanny2.jpeg" alt="">
+
+                                        <div class="rightdesigncontent">
+                                            <img src="images/icf_horizontal.png" alt="">
+                                            <h5>Certified Life Coach</h5>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+
+                    <section class="into-section-white-bg">
+                        <div class="container">
+                            <div class="wellness-header" data-aos="fade-up" data-aos-duration="2000">
+                                <h3>Emotional Healing and Personal Growth</h3>
+                                <p>Take the next step in your healing journey. Reclaim Your Best Life
+                                    is a powerful guide to emotional healing, trauma recovery, and building
+                                    a life of
+                                    confidence, peace, and purpose.</p>
+                            </div>
+
+                     
+<app-emotionalswiper/>
 
 
-            <app-emotionalswiper />
 
-
-
-        </div>
-    </section>
+                        </div>
+                    </section>
 
 
 
 
 
 
-</main>
+                </main>
