--- a/src/app/components/exercises-workbook/exercises-workbook.component.html
+++ b/src/app/components/exercises-workbook/exercises-workbook.component.html
@@ -17,7 +17,7 @@
                         </div>
 
 
-                        <div class="cta-box" data-aos="fade-up" data-aos-duration="900">
+                        <div class="cta-box">
                             <h3>Kenny Weiss: Truth & Healing Advocate</h3>
                             <p>He specializes in helping people heal from their emotional hurts, co-dependence, and pain
                                 from the past so they can once again love themselves. </p>
