--- a/src/app/components/exercises-workbook/exercises-workbook.component.html
+++ b/src/app/components/exercises-workbook/exercises-workbook.component.html
@@ -2,7 +2,7 @@
         <section class="paddings">
             <div class="container">
                 <div class="works-sections">
-                    <div class="left" data-aos="zoom-in-right">
+                    <div class="left">
                         <h5 class="tag-line">How it works?</h5>
                         <h3>Journey to Success Exercises Workbook</h3>
                         <p>Kenny Weiss believes if he is going to teach it, he must first live it and learn from it.
@@ -30,7 +30,7 @@
 
                     </div>
 
-                    <div class="right" data-aos="zoom-in-left">
+                    <div class="right">
                         <div class="step-line"></div>
  
                     <div class="step" >
