--- a/src/app/layout/courses/courses-details/courses-details.component.html
+++ b/src/app/layout/courses/courses-details/courses-details.component.html
@@ -54,14 +54,15 @@
                         </div>
 
                        <div class="Player5">
-                      <div *ngIf="videoUrl">
-                <iframe 
-                    width="560" 
-                    height="315" 
-                     src ="https://player.hotmart.com/embed/WLa96km4Lk" 
-                    frameborder="0" 
-                    allowfullscreen>
-                </iframe>
+                      <div> 
+              <iframe
+  width="560"
+  height="315"
+  *ngIf="videoUrl"
+  [src]="videoUrl | safeUrl"
+  frameborder="0"
+  allowfullscreen>
+</iframe>
                 </div>
                          
                       
@@ -105,8 +106,14 @@
                 <div class="container"> 
                     <div class="grid-3-7 grid-7-3">
                         <div class="Player5">
-                            <iframe title="YouTube video player" src="https://player.hotmart.com/embed/Yq2jKv05qa"
-                                width="100%" height="500" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+                               <iframe
+                                    width="560"
+                                    height="315"
+                                    *ngIf="introvideoUrl"
+                                    [src]="introvideoUrl | safeUrl"
+                                    frameborder="0"
+                                    allowfullscreen>
+                                    </iframe>
                         </div> 
                         <div class="box3"> 
                             <h3>{{ service.acf?.video_title}}</h3>
