--- a/src/app/components/course-slider/course-slider/course-slider.component.html
+++ b/src/app/components/course-slider/course-slider/course-slider.component.html
@@ -1,5 +1,5 @@
 
-<div class="swiper mySwiper"  *ngIf="services?.length">
+<div class="swiper mySwiper">
   <div class="swiper-wrapper">
     <div class="swiper-slide"  *ngFor="let service of services">
       <div class="card">
