--- a/src/app/layout/courses/courses.component.html
+++ b/src/app/layout/courses/courses.component.html
@@ -1,6 +1,10 @@
 
-
-<main class="mt pt-4">
+<!-- Loader -->
+<div *ngIf="loading" class="loader">
+  <img src="assets/loader.gif" alt="Loading..." />
+  loader
+</div>
+<main class="mt pt-4" *ngIf="!loading">
  <div *ngIf="services?.length">
     <section class="sourses-section">
         <div class="course-heading">
